fix box overflow in some situations

--- a/src/styles/box.less
+++ b/src/styles/box.less
@@ -6,6 +6,7 @@
     justify-content: space-between;
     flex-grow: 0;
     flex-wrap: wrap;
+    overflow-x: hidden;
 
     .box-child {
         &.full-height {
