--- a/src/styles/container.less
+++ b/src/styles/container.less
@@ -4,6 +4,7 @@
     margin: 0 auto;
     padding: 1rem;
     box-sizing: border-box;
+    overflow-x: hidden;/*needed for box when child is the same wide than box columns*/
 
     &.full-height {
         height: 100%;
